# falkon

src/plugins/: CMakeLists.txt
src/plugins/BlockMatrix/: CMakeLists.txt  README.md  blockmatrix.json  blockmatrix_plugin.cpp  blockmatrix_plugin.h  bm_interceptor.cpp  bm_interceptor.h
